@@ -102,6 +102,15 @@ New Features
 * SOLR-3531: Allowing configuring maxMergeSizeMB and maxCachedMB when
   using NRTCachingDirectoryFactory. (Andy Laird via Mark Miller) 
 
+* SOLR-4118: Fix replicationFactor to align with industry usage.
+  replicationFactor now means the total number of copies
+  of a document stored in the collection (or the total number of
+  physical indexes for a single logical slice of the collection).
+  For example if replicationFactor=3 then for a given shard there
+  will be a total of 3 replicas (one of which will normally be
+  designated as the leader.) (yonik)
+
+
 Optimizations
 ----------------------
 
